# summa

./: .tbdflow.yml  AGENTS.md  Cargo.toml  Project Specification.md  README.md  summa.toml
.github/: copilot-instructions.md
.github/skills/tbdflow/: SKILL.md
.github/workflows/: rust-ci.yml
src/: agent.rs  config.rs  db.rs  lib.rs  main.rs  reader.rs  scraper.rs  search.rs  storage.rs  summary.rs  ui.rs
