[package]
name = "summera"
version = "0.1.1"
authors = ["Claes Adamsson <claes.adamsson@gmail.com>"]
repository = "https://github.com/cladam/summa"
readme = "README.md"
license = "MIT"
description = "TUI for webpage summarisation"
keywords = ["tui", "documentation", "summary", "LLMs"]
categories = ["command-line-utilities", "text-processing"]
edition = "2021"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
clap_complete = "4.5.57"
colored = "3.0.0"
thiserror = "2.0.17"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
rumdl = "0.1.7"
chrono = { version = "0.4.42", features = ["serde"] }
dialoguer = "0.12.0"
edit = "0.1.5"
sled = "0.34.7"
dirs = "6.0.0"
atty = "0.2.14"
tempfile = "3.22.0"
tantivy = "0.25.0"
lazy_static = "1.5.0"
self_update = "0.42.0"
# TUI
ratatui = "0.30.0"
crossterm = "0.29.0"
# Web scraping
reqwest = { version = "0.13.1", features = ["json"] }
scraper = "0.25.0"
# Async runtime
tokio = { version = "1", features = ["full"] }
rstructor = "0.2.7"
schemars = "1.2.0"

[lib]
name = "summera"
path = "src/lib.rs"
